$Id: History,v 1.11 1999-11-23 17:09:26 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov 23, 99, J.Allison (tag intercoms-V00-01-02)
- Tagged changes for Software Reference Manual on behalf of Makoto Asai.

Nov 4, 99, M.Asai (tag intercoms-V00-01-01)
- G4UImanager.cc is updated for G4cout modification.
- Comments are enriched for software reference manual.

Oct 26th, 99 J.Allison
- Prepared G4VVisManager.hh and G4VGraphicsScene.hh for Software
  Reference Manual.

Oct 4th, 99 J.Allison (tag intercoms-V00-01-00)
- Augmented G4VGraphicsScene to include AddPrimitive methods for
  G4Polyline, G4Text, G4Circle, G4Square, G4Polymarker, G4Polyhedron
  and G4NURBS.

May 19th, 99 J.Allison (tag intercoms-01-00-05)
- Protected G4UIcommand.cc with if (aToken.length()>0...

May 19th, 99 J.Allison (tag intercoms-01-00-04)
- Improvements suggested by Code Wizard in G4VVisManager.

May 7th, 99 J.Allison (tag intercoms-01-00-03)
- Added newVal.resize( parameter.entries() ) to G4UIcommand::SetParameter.

Apr 28, 99 J.Allison (tag intercoms-01-00-02)
- Moved G4VVisManager and G4VGraphicsScene from graphics_reps.

Paulo Mora de Freitas (tag intercoms-01-00-01)
- Added abstract interface G4VFlavoredParallelWorld and