@@ -1,4 +1,4 @@
-$Id: History,v 1.11 1999-11-23 17:09:26 johna Exp $
+$Id: History,v 1.12 2000-02-14 08:41:21 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Feb 14, 00, M.Asai (tag intercoms-V01-00-00)
+- Put "const" to "char *" arguments in G4UImanager
 
 Nov 23, 99, J.Allison (tag intercoms-V00-01-02)
 - Tagged changes for Software Reference Manual on behalf of Makoto Asai.
